syntax = "proto3";

package OrderAction.events;

option java_multiple_files = true;

message PaymentGeneratedEvent{

    string orderId = 1;

    string paymentId = 2;
}