syntax = "proto3";

package OrderAction.events;

option java_multiple_files = true;

message StockDeductionResultEvent{
    string orderId = 1;
    string eventType = 2;
}